unified_tests/method_calls/unknown_method/expect/build.text.stderr
lib.copp:7:17: error: unknown method 'User.missing'
      return user.missing()
                  ^
